# MIRTK

./: .appveyor.yml  .bintray.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS.txt  BasisConfigSettings.cmake  BasisPack.cmake  BasisProject.cmake  BasisSettings.cmake  BasisTools.cmake  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.txt  CheckPublicHeaders.cmake  CommonTools.cmake  Config.cmake.in  ConfigUse.cmake.in  ConfigVersion.cmake.in  ConfigureIncludeFiles.cmake  Directories.cmake.in  DirectoriesSettings.cmake  DocTools.cmake  Dockerfile  Doxyfile.in  ExecuteProcess.cmake  ExportTools.cmake  ExternalData.cmake  FindAFNI.cmake  FindARPACK.cmake  FindBASH.cmake  FindBLAS.cmake  FindFLANN.cmake  FindGMock.cmake  FindGTest.cmake  FindITK.cmake  FindJythonInterp.cmake  (+40 more)
Applications/: BasisProject.cmake  CMakeLists.txt  __init__.py.in  average-dofs.cc  average-images.cc  bisect-dof.cc  calculate-distance-map.cc  calculate-exponential-map.cc  calculate-lie-bracket.cc  calculate-logarithmic-map.cc  calculate-surface-attributes.cc  calculate-surface-spectrum.cc  calculate.cc  close-image.cc  concatenate-dofs.cc  concatenate-images.cc  convert-dof.cc  convert-dof2csv.cc  convert-dof2velo.cc  convert-image.cc  convert-mris.py  convert-pointset-to-mat.cc  convert-pointset.cc  copy-pointset-attributes-from-mat.cc  copy-pointset-attributes.cc  cut-brain.cc  decimate-surface.cc  delete-pointset-attributes.cc  detect-edges.cc  dilate-image.cc  downsample-image.cc  edit-dof.cc  edit-image.cc  erode-image.cc  evaluate-distance.cc  evaluate-distortion.cc  evaluate-dof.cc  evaluate-jacobian.cc  evaluate-overlap.cc  evaluate-surface-overlap.cc  (+24 more)
Applications/config/: Depends.cmake
Applications/doc/: construct-atlas-config.json  dhcp-atlas-ages.csv  dhcp-atlas-config.json  dhcp-atlas-uids.csv
Applications/src/: CMakeLists.txt  aggregate-images.cc  auto-contrast.cc  average-dofs.cc  average-images.cc  average-measure.py  average-overlap.py  bisect-dof.cc  blend-surface.cc  calculate-distance-map.cc  calculate-element-wise.cc  calculate-exponential-map.cc  calculate-lie-bracket.cc  calculate.cc  (+75 more)
Applications/tools/: CMakeLists.txt  mirtk.py
CMake/: CMakeLists.txt  Depends.cmake  ScriptConfig.cmake.in  Settings.cmake  mirtk_add_executable.cmake  mirtk_add_library.cmake  mirtk_add_test.cmake
CMake/Basis/: BashUtilities.dox  BasisConfigSettings.cmake  BasisPack.cmake  BasisSettings.cmake  BasisTest.cmake  BasisTools.cmake  CMakeLists.txt  COPYING.txt  CheckPublicHeaders.cmake  CommonTools.cmake  Config.cmake.in  ConfigureIncludeFiles.cmake  CxxUtilities.dox  Directories.cmake.in  DirectoriesSettings.cmake  DocTools.cmake  ExecuteProcess.cmake  ExportTools.cmake  ExternalData_config.cmake.in  FindFLANN.cmake  FindJythonInterp.cmake  FindLIBLINEAR.cmake  FindPerl.cmake  FindPerlLibs.cmake  FindPythonInterp.cmake  FindPythonModules.cmake  FindSparseBayes.cmake  FindSphinx.cmake  FindTBB.cmake  GenerateConfig.cmake  ImportTools.cmake  InstallationTools.cmake  InterpTools.cmake  MatlabTools.cmake  ModuleConfig.cmake.in  ModuleConfigUse.cmake.in  Modules.dox  PostprocessChangeLog.cmake  ProjectSettings.cmake.in  ProjectTools.cmake  (+16 more)
CMake/Basis/uninstall/: CMakeLists.txt
CMake/Config/: Config.cmake.in  ConfigSettings.cmake  Depends.cmake  ScriptConfig.cmake.in  Settings.cmake
CMake/Modules/: CMakeLists.txt  FindARPACK.cmake  FindEigen3.cmake  FindFLANN.cmake  FindMATLAB.cmake  FindPython.cmake  FindPythonInterp.cmake  FindSphinx.cmake  FindSuiteSparse.cmake  FindTBB.cmake  FindUMFPACK.cmake  MIRTKAddExecutable.cmake  MIRTKAddLibrary.cmake  MIRTKAddTest.cmake  MIRTKConfigureModule.cmake  MIRTKPolicies.cmake  MIRTKProjectBegin.cmake  MIRTKTools.cmake  mirtkAddExecutable.cmake  mirtkAddLibrary.cmake  mirtkAddTest.cmake  mirtkConfigureModule.cmake  mirtkGenerateBashCompletions.cmake  mirtkGetTargetName.cmake  mirtkPolicies.cmake  mirtkProjectBegin.cmake  mirtkProjectEnd.cmake  mirtkTargetDependencies.cmake  mirtkTools.cmake
Docker/: Dockerfile  Dockerfile-ubuntu
Documentation/: CMakeLists.txt  README.md  apidoc.rst  changelog.rst  commands.rst  contents.rst  download.rst  getstarted.rst  help.rst  index.rst  install.rst  modules.rst  people.rst  publications.rst  sidebar.rst
Examples/: register_brain_images_using_symmetric_svffd.py
Examples/helloworld/: CMakeLists.txt  README.md
Modules/IO/src/: CMakeLists.txt  GIPLImageReader.cc  GIPLImageWriter.cc  IOConfig.cc  MetaImageReader.cc  MetaImageWriter.cc  NiftiImage.cc  NiftiImage.h  NiftiImageInfo.cc  NiftiImageReader.cc  NiftiImageWriter.cc  PGMImageReader.cc  PGMImageWriter.cc  PNGImageWriter.cc  PointSetIO.cc  mirtkIOConfig.cc  mirtkNiftiImageInfo.cc  mirtkPGMImageWriter.cc
Modules/IO/src/gifti/: gifti_io.c  gifti_io.cc  gifti_io.h  gifti_xml.c  gifti_xml.cc  gifti_xml.h
Modules/IO/src/meta/: metaIOConfig.h  metaTypes.h
Modules/IO/src/nifti/: nifti1.h  nifti2.h  nifti2_io.c  nifti2_io.cc  nifti2_io.h  znzlib.cc  znzlib.h
Modules/Image/src/: BaseImage.cc  CMakeLists.txt  CityBlockDistanceTransform.cc  Closing.cc  ConnectedComponents.cc  CubicBSplineConvolution.cc  DataOp.cc  DifferenceOfCompositionLieBracketImageFilter3D.cc  Dilation.cc  DisplacementToVelocityFieldBCH.cc  Downsampling.cc  Erosion.cc  EuclideanDistanceTransform.cc  ExtrapolateImageFunction.cc  ForEachVoxelFunction.py  GaussianBlurring.cc  GaussianBlurring2D.cc  GaussianBlurring4D.cc  GaussianBlurringWithPadding.cc  GaussianBlurringWithPadding2D.cc  GaussianPyramidFilter.cc  GenericImage.cc  GradientImageFilter.cc  HashImage.cc  HessianImageFilter.cc  Histogram1D.cc  Histogram2D.cc  HistogramMatching.cc  ImageAttributes.cc  ImageConfig.cc  ImageFunction.cc  ImageGradientFunction.cc  ImageReader.cc  ImageReaderFactory.cc  ImageToImage.cc  ImageWriter.cc  ImageWriterFactory.cc  InterpolateImageFunction.cc  NeighborhoodOffsets.cc  Resampling.cc  (+54 more)
Scripts/: install_depends.sh  install_mirtk_appimage.sh  make_appimage.sh  mirtk_bash_completion.sh  replace.sh  travis.sh
Templates/: README.md
uninstall/: CMakeLists.txt
(+1343 files in other folders)
